# MovieSelectorApp

./: .gitignore  CMakeLists.txt  DataHandler.cpp  DataHandler.h  build_and_run.sh  main.cpp  movie_database.csv  movie_database_backup.csv  remove_duplicates.sh  show_all_categories.sh
include/: DataHandler.h  Movie.h  MovieSelector.h  Questionaire.h
src/: DataHandler.cpp  MovieSelector.cpp  Questionaire.cpp  main.cpp
